fix listening along short term
Will find a long term solution to avoid overlapping semi transparents getting darker

--- a/theme.css
+++ b/theme.css
@@ -12,7 +12,7 @@
 .pc-layers {
   background: rgba(0,0,0, 0.7) !important;
 }
-.container-2Thooq, form {
+.container-2Thooq, form, .pc-listeningAlong {
   background: rgba(32,34,37,.3) !important;
 }
 .pc-scroller::-webkit-scrollbar-track,
